# mino

./: .env  .gitignore  Dockerfile  db.py  pyproject.toml  test.txt  xx.py
app/: main.py
app/api/v1/: TaskRouter.py  task.py
app/core/: config.py  db.py  minio.py
app/models/: task.py
app/schemas/: TaskSchema.py  task.py
app/services/: task.py  task_service.py
app/tests/: test_create_new_task.py
app/utils/: logger.py
