[project]
name = "mino-fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.36",
    "fastapi[all]>=0.115.12",
    "flake8>=7.2.0",
    "httpx>=0.28.1",
    "mariadb>=1.1.12",
    "minio>=7.2.15",
    "mysql-connector-python>=9.3.0",
    "mysqlclient>=2.2.7",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.41",
]
